# driftglass

./: README.md  pyproject.toml
driftglass/: __init__.py  cli.py  detectors.py  display.py  generators.py  pipeline.py
tests/: test_detectors.py  test_pipeline.py
