[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftglass"
version = "0.1.0"
description = "A local-first data pipeline anomaly detector — watches data streams for concept drift, distribution shifts, and statistical anomalies in real-time from your terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "hellohaven.ai" },
]
keywords = ["drift", "anomaly", "data-quality", "streaming", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "rich>=13.0",
    "click>=8.1",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
driftglass = "driftglass.cli:main"
